[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "patch-path"
version = "1.0.0"
description = "Run a command with patched executables on the path"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "@readwithai", email = "talwrii@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
patch-path = "patch_path.main:main"

[project.urls]
Homepage = "https://github.com/yourusername/patch-path"
Repository = "https://github.com/yourusername/patch-path"
Issues = "https://github.com/yourusername/patch-path/issues"

[tool.hatch.build.targets.wheel]
packages = ["patch_path"]
